Still working on my dom and Factory function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      </div>
 
      <div class = "col-9">
-        <input type="radio" name="regNumber" class="RegTypeRadio" value="Capetown" id="CAid">Capetown
+        <input type="radio" name="regNumber" class="RegTypeRadio" value="CapeTown" id="CAid">CapeTown
         <input type="radio" name="regNumber" class="RegTypeRadio" value="Wellington" id="CNid">Wellington
         <input type="radio" name="regNumber" class="RegTypeRadio" value="Stellenbosch" id="CLid">Stellenbosch
 
@@ -31,6 +31,8 @@
      <div class="col-7">
      <ul class="numberPlates"></ul>
      </div>
+     <script src="regLogic.js"></script>
     <script src="reg-dom.js"></script>
+    
 </body>
 </html>
