--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
      </div>
 
      <div class = "col-9">
-        <input type="radio" name="regNumber" class="RegTypeRadio" value="CapeTown" id="CAid">CapeTown
-        <input type="radio" name="regNumber" class="RegTypeRadio" value="Wellington" id="CNid">Wellington
-        <input type="radio" name="regNumber" class="RegTypeRadio" value="Stellenbosch" id="CLid">Stellenbosch
+        <input type="radio" name="regNumber" class="RegTypeRadio" value="CA" id="id">CapeTown
+        <input type="radio" name="regNumber" class="RegTypeRadio" value="CN" id="id">Wellington
+        <input type="radio" name="regNumber" class="RegTypeRadio" value="CL" id="id">Stellenbosch
 
      </div>
   
