--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Registration numbers</h1>
     <div class ="col-11">Name
-        <input type="text" class="regName"  placeholder="Enter your Registration" name="" value="" id="field_1"> 
+        <input type="text" class="regName"  placeholder="Enter your Registration" name="" value="" id="field_1" maxlength=11> 
     </div>
     <div class = "col-10">
             <button id="addButton" type="button" name="Add" value="add">Add</button>
