working on my errors messnge

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
      <div class ="col-8">
             <button class="showButton" type="button" name="show" value="Show">Show</button>
      </div>
+     <div class ="col- 6">
+        <button class="showAllButton" type="button" name="show" value="ShowAll">ShowAllRegistration</button>
+ </div>
+
+
      <div class="col-7">
      <ul class="numberPlates"></ul>
      </div>
