--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <h1>Registration numbers</h1>
-    <div class ="col-11">Name
+    <div class ="col-11">Enter the registration number
          
-        <input type="text" class="regName"  placeholder="Enter your Registration" name="" value="" id="field_1" maxlength=11 > 
+        <input type="text" class="regName"  placeholder="eg CA 1235" name="" value="" id="field_1"  > 
     </div>
     <div class = "col-10">
             <button id="addButton" type="button" name="Add" value="add">Add</button>
