--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class ="col-11">Enter the registration number
          
-        <input type="text" class="regName"  placeholder="eg CA 1235" name="" value="" id="field_1"  > 
+        <input type="text" class="regName"  placeholder="eg CA 1235" name="" value="" id="field_1"  maxlength= 10 > 
     </div>
     <div class = "col-10">
             <button id="addButton" type="button" name="Add" value="add">Add</button>
